src/objects/QB_Trans_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clr__c</fullName>
        <label>Clr</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debit_Credit__c</fullName>
        <label>Debit Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_Dimension_1__c</fullName>
        <label>FF Dimension 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_Dimension_2__c</fullName>
        <label>FF Dimension 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_GLA_Code__c</fullName>
        <label>FF GLA Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_GLA_Name__c</fullName>
        <label>FF GLA Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JournalBatch__c</fullName>
        <label>JournalBatch</label>
        <referenceTo>JournalBatch__c</referenceTo>
        <relationshipLabel>QB Trans Details</relationshipLabel>
        <relationshipName>QB_Trans_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num__c</fullName>
        <label>Num</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RS_Project_ID__c</fullName>
        <label>RS Project ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Split__c</fullName>
        <label>Split</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>QB Trans Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Class__c</columns>
        <columns>Date__c</columns>
        <columns>Debit_Credit__c</columns>
        <columns>FF_Dimension_1__c</columns>
        <columns>FF_GLA_Code__c</columns>
        <columns>FF_GLA_Name__c</columns>
        <columns>JournalBatch__c</columns>
        <columns>Num__c</columns>
        <columns>Name__c</columns>
        <columns>Memo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GL-{0000000000}</displayFormat>
        <label>QB Trans Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Trans Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>